src/objects/Metrics_Data__c.object
<CustomObject>
    <fields>
        <fullName>Case_Contact_ID__c</fullName>
        <formula>Case__r.ContactId</formula>
        <label>Case Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Metrics Data</relationshipLabel>
        <relationshipName>Call_Metrics_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Care_Call_Date__c</fullName>
        <label>Customer Care Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Effort_Score__c</fullName>
        <label>Customer Effort Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metrics_Name__c</fullName>
        <formula>Metrics__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metrics Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metrics__c</fullName>
        <label>Metrics</label>
        <referenceTo>Metrics__c</referenceTo>
        <relationshipLabel>Metrics Data</relationshipLabel>
        <relationshipName>Metrics_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Net_Promoter_Score__c</fullName>
        <label>Net Promoter Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promoter_Type__c</fullName>
        <formula>IF( Net_Promoter_Score__c &gt;=9, &quot;Promoter&quot;,
IF( OR(Net_Promoter_Score__c = 7, Net_Promoter_Score__c = 8) , &quot;Passive&quot;,
IF( Net_Promoter_Score__c &lt;=6, &quot;Detractor&quot;,
&quot;&quot;)))</formula>
        <label>Promoter Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Num__c</fullName>
        <label>Response (Num)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Number__c</fullName>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Metrics Data</relationshipLabel>
        <relationshipName>Survey_Number</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Survey_Taker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Taker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Metrics Data</relationshipLabel>
        <relationshipName>Metrics_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Template</label>
        <referenceTo>Survey_Template__c</referenceTo>
        <relationshipLabel>Metrics Data</relationshipLabel>
        <relationshipName>Metrics_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Metrics Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Survey_Template__c</columns>
        <columns>Metrics__c</columns>
        <columns>Response__c</columns>
        <columns>Survey_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{0000000000}</displayFormat>
        <label>Metrics Data Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metrics Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>